force-app/main/default/objects/Project__c/fields/Github__c.field-meta.xml
<CustomField>
    <fullName>Github__c</fullName>
    <label>Github</label>
    <type>Url</type>
</CustomField>