force-app/main/default/objects/Project__c/fields/youtube__c.field-meta.xml
<CustomField>
    <fullName>youtube__c</fullName>
    <label>youtube</label>
    <type>Url</type>
</CustomField>